--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 @font-face {
-  font-family: 'Ayer Poster';
-  src: local('Ayer Poster Medium'), local('Ayer-Poster-Medium'), url('AyerPoster-Medium.woff2') format('woff2'), url('AyerPoster-Medium.woff') format('woff'),
-    url('AyerPoster-Medium.ttf') format('truetype');
+  font-family: "Ayer Poster";
+  src: local("Ayer Poster Medium"), local("Ayer-Poster-Medium"),
+    url("AyerPoster-Medium.woff2") format("woff2"),
+    url("AyerPoster-Medium.woff") format("woff"),
+    url("AyerPoster-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
@@ -21,14 +23,14 @@ body,
 }
 
 body {
-  background: #F103E5;
+  background: #f103e5;
 }
 
 a {
   color: black;
 }
 
-input[type='range'] {
+input[type="range"] {
   display: block;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -39,7 +41,7 @@ input[type='range'] {
   outline: 0;
 }
 
-input[type='range']::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   background-color: #000;
   width: 25px;
@@ -49,6 +51,6 @@ input[type='range']::-webkit-slider-thumb {
   transition: 0.3s ease-in-out;
 }
 
-input[type='range']::-webkit-slider-thumb:active {
+input[type="range"]::-webkit-slider-thumb:active {
   transform: scale(1);
 }
